objects/adapps__OptimizerPlus_Filters__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>adapps__Category_INCREASE_USER_ADOPTION__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>Category_INCREASE_USER_ADOPTION</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>adapps__Category_MONITOR_LIMITS__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>Category_MONITOR_LIMITS</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>adapps__Category_OPTIMIZER_AND_SUMMARY__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>Category_OPTIMIZER_AND_SUMMARY</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>adapps__FeatureType_CUSTOM_CODE__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>FeatureType_CUSTOM_CODE</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>adapps__FeatureType_CUSTOM_LAYOUT_FOR_OBJECTS__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>FeatureType_CUSTOM_LAYOUT_FOR_OBJECTS</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>adapps__FeatureType_FIELDS__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>FeatureType_FIELDS</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>adapps__FeatureType_IMPROVE_USER_EXPERIENCE__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>FeatureType_IMPROVE_USER_EXPERIENCE</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>adapps__FeatureType_INCREASE_USER_ADOPTION__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>FeatureType_INCREASE_USER_ADOPTION</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>adapps__FeatureType_OBJECT_LIMITS__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>FeatureType_OBJECT_LIMITS</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>adapps__FeatureType_ORG_LIMITS__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>FeatureType_ORG_LIMITS</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>adapps__FeatureType_REPORT_AND_DASHBOARDS__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>FeatureType_REPORT_AND_DASHBOARDS</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>adapps__FeatureType_USAGE__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>FeatureType_USAGE</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>adapps__FeatureType_USER_MANAGEMENT__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>FeatureType_USER_MANAGEMENT</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>adapps__FeatureType_WORKFLOW__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>FeatureType_WORKFLOW</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>adapps__ImpEffort_1_2_HOURS__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>ImpEffort_1_2_HOURS</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>adapps__ImpEffort_2_HOURS__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>ImpEffort_2_HOURS</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>adapps__ImpEffort_30_60_MINUTES__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>ImpEffort_30_60_MINUTES</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>adapps__ImpEffort_30_MINUTES__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>ImpEffort_30_MINUTES</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>adapps__Impact_HIGH_IMPACT__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>Impact_HIGH_IMPACT</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>adapps__Impact_LOW_IMPACT__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>Impact_LOW_IMPACT</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>adapps__Impact_MEDIUM_IMPACT__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>Impact_MEDIUM_IMPACT</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>adapps__Impact_NOT_ENABLED__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>Impact_NOT_ENABLED</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>adapps__Impact_READY_IMPACT__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>Impact_READY_IMPACT</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>adapps__Impact_UNABLE_TO_ANALYZE__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>Impact_UNABLE_TO_ANALYZE</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>OptimizerPlusFilters</label>
</CustomObject>